# neuropipeline

./: .gitignore  README.md  publish.py  requirements.txt  upload_development_package.bat  visualizer.md
.claude/: settings.local.json
neuropipeline/: README.md  pyproject.toml  setup.cfg
neuropipeline/neuropipeline/: __init__.py  base.py  eeg.py  fnirs.py  npl_gui.py  visualizer.py
neuropipeline/neuropipeline/eeg/: __init__.py  eeg.py  eeg_data.py  visualizer.py
neuropipeline/neuropipeline/eeg/exporters/: __init__.py  base.py  csv.py  eeglab.py  hdf5.py
neuropipeline/neuropipeline/eeg/importers/: __init__.py  base.py  grecorder.py
neuropipeline/neuropipeline/fnirs/: __init__.py  analysis.py  fnirs.py  fnirs_data.py  fnirs_io.py  preprocessor.py  snirf_types.py  visualizer.py
neuropipeline/neuropipeline/fnirs/exporters/: __init__.py  base.py  csv.py  snirf.py
neuropipeline/neuropipeline/fnirs/importers/: __init__.py  base.py  snirf.py
neuropipeline/tests/: eeg_tests.py  fnirs_test.py  test_fnirs.py  tester.py  tests.py  visualizer_test.py
